--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Clima agora!</title>
+        <title>Clima app</title>
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
     <body>
         <div class="container">
         <div class="form">
-            <h3>Confira o clima de uma cidade:</h3>
+            <h3>Como está o tempo agora em:</h3>
             <div class="form-input-container">
             <input
             type="text"
